fixed detail page on smaller screens

--- a/assets/scss/4-layout/_card.scss
+++ b/assets/scss/4-layout/_card.scss
@@ -258,7 +258,7 @@
   #details-heading{
     flex-direction: row;
     h5{
-      margin: 0 3rem;
+      margin: 0 1rem;
     }
   }
 
