--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -838,7 +838,7 @@ nav .connect #create1:hover {
     flex-direction: row;
   }
   #details-heading h5 {
-    margin: 0 3rem;
+    margin: 0 1rem;
   }
   .text-fix {
     font-size: 0.7rem;
